# vortex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: action.rs  anchor.rs  anchor_tests.rs  buffer.rs  buffer_tests.rs  decoration.rs  decoration_tests.rs  editor.rs  editor_tests.rs  history.rs  history_tests.rs  lib.rs  lib_tests.rs  selection.rs  selection_tests.rs  view.rs
crates/core/src/lsp/: client.rs  client_tests.rs  convert.rs  convert_tests.rs  mod.rs
crates/core/src/syntax/: engine.rs  engine_tests.rs  highlight.rs  highlight_tests.rs  mod.rs
crates/core/tests/: delta_snapshot_agreement.rs  lsp_rust_analyzer.rs
crates/grammar-rust/: Cargo.toml
crates/grammar-rust/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: command.rs  compositor.rs  config.rs  filepicker.rs  grammar.rs  grammar_tests.rs  keymap.rs  layout.rs  main.rs  osc52.rs  palette.rs  picker.rs  prompt.rs  testutil.rs  theme.rs  themepicker.rs  toast.rs
crates/tui/themes/: daylight.toml  instrument.toml  phosphor.toml  undertow.toml
docs/: SPEC.md
runtime/: README.md
