# vortex-core: headless editor core. MUST NOT depend on any terminal crate
# (crossterm/ratatui) - that boundary is the whole point (SPEC §1, §15).
[package]
name = "vortex-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel = "2.5.0"

[dev-dependencies]
smol = "2.0.2"
