# vortex-core: headless editor core. MUST NOT depend on any terminal crate
# (crossterm/ratatui) - that boundary is the whole point (SPEC §1, §15).
[package]
name = "vortex-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel = "2.5.0"
crop = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
unicode-segmentation = "1.13.3"

[dev-dependencies]
proptest = "1.11.0"
smol = "2.0.2"
