# vortex-tui: thin terminal frontend. Owns the viewport + render loop (SPEC §5, §7).
[package]
name = "vortex-tui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
nucleo-matcher = "0.3.1"
# crossterm is used via ratatui's re-export (ratatui::crossterm) so the KeyEvent
# types the render loop and event reader share are guaranteed identical - a
# separate crossterm dep risks version skew against ratatui's bundled 0.29.
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
smol = "2.0.2"
# Theme files (SPEC §3 "Config" row, §10.5): the format the config seam was always
# going to use, arriving first for themes.
toml = "1.1.3"
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
vortex-core = { path = "../core" }
